--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+          <img src="" />
           <a class="navbar-brand" href="#">JumpStart Georgia's Prezi's</a>
         </div>
         <div class="collapse navbar-collapse">
@@ -56,31 +51,31 @@
       </thead>
       <tbody>
         <tr>
-          <td><a href="4m/">4M Conference</a></td>
+          <td><a href="http://bit.ly/1iSMxp7">4M Conference</a></td>
           <td>Eric Barrett</td>
           <td>11/15/2013</td>
           <td>English</td>
         </tr>
         <tr>
-          <td><a href="ccwd/">Open Data</a></td>
+          <td><a href="http://bit.ly/1nuAKxt">Open Data</a></td>
           <td>Eric Barrett</td>
           <td>01/28/2014</td>
           <td>English</td>
         </tr>
         <tr>
-          <td><a href="design_for_effective_communication/">Design for Effective Communication</a></td>
+          <td><a href="http://bit.ly/1ecPQ8q">Design for Effective Communication</a></td>
           <td>Mariam Kobuladze</td>
           <td>01/28/2014</td>
           <td>Georgian</td>
         </tr>
         <tr>
-          <td><a href="transformation_from_data_to_visualization/">Transformation From Data to Visualization</a></td>
+          <td><a href="http://bit.ly/MDt0f5">Transformation From Data to Visualization</a></td>
           <td>Irakli Chumburidze</td>
           <td>01/28/2014</td>
           <td>Georgian</td>
         </tr>
         <tr>
-          <td><a href="visualizing_for_data_driven_advocacy/">Visualizing for Data-driven Advocacy</a></td>
+          <td><a href="http://bit.ly/1iSNg9O">Visualizing for Data-driven Advocacy</a></td>
           <td>Cristina Maza</td>
           <td>01/28/2014</td>
           <td>English</td>
