--- a/index.html
+++ b/index.html
@@ -20,14 +20,8 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <img src="" />
-          <a class="navbar-brand" href="#">JumpStart Georgia's Prezi's</a>
+          <a class="navbar-brand" href="http://presentations.jumpstart.ge/">JumpStart Georgia's Prezi's</a>
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="http://www.jumpstart.ge/">Go To Main Site</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
       </div>
     </div>
 
