added jumpstart logo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="http://presentations.jumpstart.ge/">JumpStart Georgia's Prezi's</a>
+          <a class="navbar-brand" href="http://presentations.jumpstart.ge/"><img src="js_logo.png" /> JumpStart Georgia's Prezi's</a>
         </div>
       </div>
     </div>
@@ -32,7 +32,6 @@
         <p><a class="btn btn-primary btn-lg" role="button" href="http://www.jumpstart.ge/en/">Learn more &raquo;</a></p>
       </div>
     </div>
-
 
     <table id="dataTable">
       <thead>
