--- a/change_agents_forum/index.html
+++ b/change_agents_forum/index.html
@@ -131,6 +131,9 @@
 				<div>
 				  <span>@</span>jsgeorgia <span>|</span> we <br />communicate <span>data</span> better!
 				</div>
+			</div>
+			
+			<div id="slide-31" class="step" data-x="62000" data-y="0">
         <p>credits</p>
         <ul>
           <li>heart designed by <a href="http://thenounproject.com/megan.sheehan">megan sheehan</a> from the <a href="http://www.thenounproject.com/">noun project</a></li>
