--- a/data4storytelling/index.html
+++ b/data4storytelling/index.html
@@ -76,8 +76,104 @@
 			</div>
 			
 			<div class="step" data-x="34000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
-				<p></p>
+				<h2>what is the story?</h2>
 			</div>
+			
+			<div class="step" data-x="36000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>we visualize to understand the data, not just tell the story</p>
+			</div>
+			
+			<div class="step" data-x="38000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>we use statistics to uncover stories</p>
+				<ul>
+				  <li>summary info</li>
+				  <li>patterns</li>
+				  <li>outliers</li>
+				</ul>
+			</div>
+			
+			<div class="step" data-x="40000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>max, min, average (mean, median, mode), standard deviation</p>
+			</div>
+			
+			<div class="step" data-x="42000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<h2>time to tell the story</h2>
+				<p>communicating data</p>
+			</div>
+			
+			<div class="step" data-x="44000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>who is your target audience?</p>
+			</div>
+			
+			<div class="step" data-x="46000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>what is your message?</p>
+			</div>
+			
+			<div class="step" data-x="48000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>a graph alone does not a story make</p>
+			</div>
+			
+			<div class="step" data-x="50000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>frame your story! start with a title or headline!</p>
+			</div>
+			
+			<div class="step" data-x="52000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>visual, textual, auditory, interactive, mixed media</p>
+			</div>
+			
+			<div class="step" data-x="54000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>choose the best media for your story</p>
+			</div>
+			
+			<div class="step" data-x="56000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>don't confuse shiny with clear and understandable</p>
+			</div>
+			
+			<div class="step" data-x="58000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>ensure your media add value to your story, not detract from it</p>
+			</div>
+			
+			<div class="step" data-x="60000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>let the technology clarify, not obfuscate!</p>
+			</div>
+			
+			<div class="step" data-x="62000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>create a storyboard or mockup first</p>
+			</div>
+			
+			<div class="step" data-x="64000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>share your story with external review board or peers first</p>
+			</div>
+			
+			<div class="step" data-x="66000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>ensure your audience can relate on some personal level while telling the big picture</p>
+			</div>
+			
+			<div class="step" data-x="68000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<h2>pitfalls</h2>
+			</div>
+			
+			<div class="step" data-x="70000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>it is your responsibility to esnsure the data you use is good data</p>
+			</div>
+			
+			<div class="step" data-x="72000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>it is your responsibility to ensure the methodology you use to draw your conclusions is sound</p>
+			</div>
+			
+			<div class="step" data-x="74000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>ensure the story tells the real story, not just the story you want</p>
+			</div>
+			
+			<div class="step" data-x="76000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>don't rely on just the data, but understand the context</p>
+			</div>
+			
+			<div class="step" data-x="74000" data-y="0" data-z="0" data-rotate="0" data-scale="1">
+				<p>you learn by doing, so go do some storytelling!</p>
+			</div>
+			
+			
 			
 			
 			
