--- a/storybuilder/index.html
+++ b/storybuilder/index.html
@@ -57,11 +57,11 @@
 			<div class="step slide" data-x="6000" data-y="8000">
 			  <p>they do this by:
 			    <ul>
-			      <li>by presenting complex information in a way that flows</li>
-			      <li>by enabling users to design the flow</li>
-			      <li>by enabling readers to engage the media and information</li>
-			      <li>by enabling readers to find the source or raw data</li>
-			      <li>by enabling readers to share, download, and use the media and data</li>
+			      <li>presenting complex information in a way that flows</li>
+			      <li>enabling users to design the flow</li>
+			      <li>enabling readers to engage the media and information</li>
+			      <li>enabling readers to find the source or raw data</li>
+			      <li>enabling readers to share, download, and use the media and data</li>
 			    </ul>
 			  </p>
 			</div>
